# linkedin-crawler

./: README.md  run.sh
.github/workflows/: crawler_tests.yaml
crawl/: j2.json  linkedin_jobs_raw.csv  posts.json  pyproject.toml
crawl/crawler/: css_and_xpaths.py  items.py  settings.py
crawl/crawler/spiders/: linkedin.py  linkedin_spider.py  nextdoor.py
crawl/tests/: test_linkedin_spider.py
process/: Dockerfile  clean_raw.py  requirements.txt
