[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Rudy Selman <rudysemail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.2"
Scrapy = "^2.6.1"
webdriver-manager = "^3.5.3"
boto3 = "^1.21.16"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
